@@ -5,6 +5,7 @@
 * Enhancements
 
   * eagerly load format-specific methods (instead of waiting for #each to be called)
+  * use new Roo class names (Roo::OpenOffice instead of Roo::Openoffice)
 
 * Bug fixes
 
